--- a/main.css
+++ b/main.css
@@ -1,23 +1,42 @@
+/*
+COLORS:
+
+body-grey: #595e6f
+main-black: #33373b
+main-white: white
+highlight-green: #00ff00
+
+*/
+
 /* Universal Setup */
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
+/* Global Font Size */
+html {
+  font-size: 62.5%; /* Changes default font size to 10px */ 
+}
 
+/* Body Attributes */
 body {
   background-color: #595e6f;
-  padding-left: 17rem;
-  padding-right: 17rem;
+  padding-left: 27.2rem;
+  padding-right: 27.2rem;
+
+  box-sizing: border-box;
 }
 
 
 h3 {
   font-family: Raleway;
   color: white;
-  font-size: 2.5rem;
-  margin-top: 1.5rem;
+  font-size: 4rem;
+  margin-top: 2.4rem;
 }
 
 p {
@@ -34,17 +53,17 @@ ul {
   display: flex;
   justify-content: space-around;
   color: white;
-  font-size: 1.5rem;
-  padding-top: 3rem;
-  padding-bottom: 1rem;
+  font-size: 2.4rem;
+  padding-top: 4.8rem;
+  padding-bottom: 1.6rem;
 }
 
 .card-title__name {
   font-family: Raleway;
-  font-size: 5rem;
+  font-size: 8rem;
   text-transform: capitalize;
   border-bottom: 3px solid #00ff00;
-  padding-top: 2rem;
+  padding-top: 3.2rem;
 }
 
 .card-title,
@@ -57,7 +76,7 @@ ul {
 .card-services {
   display: flex;
   justify-content: space-around;
-  padding: 3rem;
+  padding: 4.8rem;
   background-color: #33373b;
 }
 
@@ -73,7 +92,7 @@ ul {
   font-family: Raleway;
   display: flex;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 3.2rem;
   color: white;
   background-color: #33373b;
 }
@@ -82,7 +101,7 @@ ul {
   font-family: Lato;
   color: white;
   font-family: Lato;
-  font-size: 3rem;
+  font-size: 4.8rem;
   font-weight: 300;
 }
 
@@ -90,8 +109,8 @@ ul {
   font-family: Lato;
   display: flex;
   justify-content: center;
-  font-size: 1.7rem;
-  padding: 2rem 8rem;
+  font-size: 2.72rem;
+  padding: 3.2rem 12.8rem;
   background-color: #33373b;
 }
 
@@ -99,8 +118,8 @@ ul {
   font-family: Lato;
   display: flex;
   justify-content: center;
-  font-size: 1.7rem;
-  padding: 1rem auto;
+  font-size: 2.72rem;
+  padding: 1.6rem auto;
   background-color: #33373b;
 }
 
@@ -112,26 +131,26 @@ ul {
   display: flex;
   justify-content: center;
   font-family: Raleway;
-  font-size: 2.5rem;
-  padding-top: 1rem;
+  font-size: 4rem;
+  padding-top: 1.6rem;
 }
 
 .profile-container {
   display: flex;
   flex-direction: row;
-  padding: 1rem;
+  padding: 1.6rem;
 }
 
 .rob-pic {
-  width: 9rem;
-  height: 9rem;
-  padding: .5rem;
+  width: 14.4rem;
+  height: 14.4rem;
+  padding: .8rem;
   border-radius: 50%;
 }
 
 .profile-text__text {
   font-family: Lato;
-  font-size: 1.2rem;
+  font-size: 1.92rem;
   color: #33373b;
 }
 
@@ -139,7 +158,7 @@ ul {
   display: flex;
   justify-content: center;
   background-color: white;
-  padding-bottom: 1rem;
+  padding-bottom: 1.6rem;
 }
 
 .hire-me__button:hover {
@@ -148,8 +167,9 @@ ul {
 
 .hire-me__button-button {
   font-family: Raleway;
+  font-size: 1.6rem;
   font-weight: 600;
-  padding: 1rem 1rem;
+  padding: 1.6rem 1.6rem;
   border: 2px solid black;
   color: black;
   text-decoration: none;
@@ -165,8 +185,8 @@ ul {
   font-family: Raleway;
   display: flex;
   justify-content: center;
-  font-size: 2.2rem;
-  padding-top: 2rem;
+  font-size: 3.52rem;
+  padding-top: 3.2rem;
   background-color: #33373b;
 }
 
@@ -177,19 +197,19 @@ ul {
 .contact-info {
   display: flex;
   justify-content: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 3.2rem;
+  padding-bottom: 3.2rem;
   background-color: #33373b;
 }
 
 .contact-info__button {
   width: 45%;
-  font-size: 1.5rem;
+  font-size: 2.4rem;
   text-decoration: none!important;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
   background-color: #00ff00;
 }
 
@@ -212,10 +232,10 @@ ul {
 
 .contact-me {
   font-family: Raleway;
-  font-size: 2rem;
+  font-size: 3.2rem;
   font-weight: 400;
-  padding-top: 1rem;
-  margin-bottom: 1rem;
+  padding-top: 1.6rem;
+  margin-bottom: 1.6rem;
   background-color: #33373b;
 }
 
@@ -243,8 +263,8 @@ a {
 .github,
 .twitter,
 .facebook {
-  font-size: 3rem;
-  padding: 1.5rem;
+  font-size: 4.8rem;
+  padding: 2.4rem;
 }
 
 .fa-github-alt:hover {
@@ -273,19 +293,19 @@ a {
 .fa-paint-brush:before {
   content: "\f1fc";
   color: #00ff00;
-  font-size: 3rem;
+  font-size: 4.8rem;
 }
 
 .fa-code:before {
   content: "\f1fc";
   color: #00ff00;
-  font-size: 3rem;
+  font-size: 4.8rem;
 }
 
 .fa-cogs:before {
   content: "\f1fc";
   color: #00ff00;
-  font-size: 3rem;
+  font-size: 4.8rem;
 }
 
 
