--- a/queries.css
+++ b/queries.css
@@ -18,3 +18,18 @@
     font-size: 3rem;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .ask-me {
+    font-size: 2.5rem;
+  }
+
+  html {
+    font-size: 50%;
+  }
+
+  body {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
