reduce font size on card-tltle media 480px

--- a/queries.css
+++ b/queries.css
@@ -40,8 +40,8 @@
   }
 }
 
-@media screen and (max-width: 450px) {
-  .card-title__name {
+@media screen and (max-width: 480px) {
+  .card-tile {
     font-size: 2em;
   }
 }
