--- a/queries.css
+++ b/queries.css
@@ -86,11 +86,15 @@
   }
 
   h1 {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   h2 {
-    font-size: 4rem;
+    font-size: 3rem;
+  }
+
+  .ask-me__description {
+    font-size: 2.5rem;
   }
 
 }
