--- a/queries.css
+++ b/queries.css
@@ -14,6 +14,10 @@
 }
 
 @media screen and (max-width: 800px) {
+  .card-title__name {
+    font-size: 6.5rem;
+  }
+  
   .ask-me {
     font-size: 3rem;
   }
