--- a/queries.css
+++ b/queries.css
@@ -13,9 +13,44 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 812px) {
   .card-title__name {
-    font-size: 6.5rem;
+    font-size: 7rem;
+  }
+
+  .card-description__name {
+    font-size: 4.5rem;
+  }
+
+  .card-description-text {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .contact-info__button {
+    width: 60%;
+    font-size: 2.4rem;
+  }
+
+  .profile-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .profile-pic {
+    display: flex;
+    justify-content: center;
+  }
+
+  .profile-text__text {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .hire-me__button {
+    padding-bottom: 2rem;
   }
   
   .ask-me {
