change margin-bottom on card-servies @450

--- a/queries.css
+++ b/queries.css
@@ -205,7 +205,7 @@
   .card-services__design,
   .card-services__develop,
   .card-services__maintain {
-    margin-bottom: 1.5em;
+    margin-bottom: 1.5rem;
     font-size: 1.3rem;
   }
 
