--- a/queries.css
+++ b/queries.css
@@ -205,6 +205,7 @@
   .card-services__design,
   .card-services__develop,
   .card-services__maintain {
+    margin-top: 1rem;
     margin-bottom: 1.5rem;
     font-size: 1.3rem;
   }
